--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,5 +20,8 @@ jobs:
         - name: Install dependencies
           run: npm install
 
+        - name: Generate prisma client
+          run: npm run db:generate
+
         - name: Run build
           run: npm run build
